--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -75,20 +75,18 @@
     cursor: pointer;
   }
 
-  .controls {
-    position: sticky;
-    top: 0;
-    z-index: 100;
-    background: var(--bg);
-    padding: 12px 16px;
-    border-bottom: 1px solid var(--card-bg);
-    text-align: center;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 12px;
-  }
+.controls {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  background: var(--bg);
+  padding: 12px 16px;
+  border-bottom: 1px solid var(--card-bg);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+}
 
   .controls input[type="text"] {
     padding: 10px;
@@ -101,12 +99,11 @@
     color: var(--text);
   }
 
-  .controls .search-line {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 8px;
-  }
+.controls .search-line {
+  display: flex;
+  width: 100%;
+  max-width: 450px;
+}
 
   .controls label {
     font-size: 14px;
@@ -121,6 +118,29 @@
     justify-content: center;
     margin-top: 8px;
   }
+
+
+.inline-group {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.inline-group label {
+  font-size: 14px;
+  color: var(--text-muted);
+}
+
+.inline-group select {
+  appearance: none;
+  background-color: var(--card-bg);
+  border: 2px solid var(--accent);
+  border-radius: 6px;
+  color: var(--text);
+  padding: 8px 12px;
+  font-size: 14px;
+  cursor: pointer;
+}
 
   ul {
     list-style-type: none;
@@ -285,30 +305,49 @@
   height: 40px;
   font-size: 16px;
   padding: 0 12px;
-  box-sizing: border-box;
   border: 2px solid var(--accent);
   border-right: none;
   border-radius: 6px 0 0 6px;
+  background-color: var(--card-bg);
+  color: var(--text);
+  box-sizing: border-box;
 }
 
 .custom-dropdown {
   position: relative;
-  display: flex;
   height: 40px;
+  display: flex;
+  flex-shrink: 0;
 }
 
 #dropdownSelected {
-  flex-shrink: 0;
   display: flex;
   align-items: center;
   padding: 0 12px;
   border: 2px solid var(--accent);
   border-left: none;
   border-radius: 0 6px 6px 0;
-  cursor: pointer;
   background-color: var(--card-bg);
   color: var(--text);
+  cursor: pointer;
   box-sizing: border-box;
+}
+
+#dropdownOptions {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: var(--card-bg);
+  border: 2px solid var(--accent);
+  border-radius: 6px;
+  overflow: hidden;
+  z-index: 200;
+}
+
+#dropdownOptions .option {
+  padding: 8px 12px;
+  cursor: pointer;
 }
 
   @media (max-width: 600px) {
@@ -410,32 +449,30 @@ Made by MrsBlobby |
 <div class="controls">
   <div class="search-line">
     <input type="text" id="searchBox" placeholder="Search..." />
-    <div class="custom-dropdown" style="position: relative; display: inline-block; margin-left: 0px;">
-      <div id="dropdownSelected" style="padding: 8px 12px; border-radius: 6px; border: 2px solid var(--accent); background-color: var(--card-bg); color: var(--text); cursor: pointer;">
-        Search By:
-      </div>
-      <div id="dropdownOptions" style="display: none; position: absolute; top: 100%; left: 0; z-index: 100; background-color: var(--card-bg); border: 2px solid var(--accent); border-radius: 6px; overflow: hidden;">
-        <div class="option" data-value="name" style="padding: 8px 12px; cursor: pointer;">Item Name</div>
-        <div class="option" data-value="book" style="padding: 8px 12px; cursor: pointer;">Plan Name</div>
-        <div class="option" data-value="entm" style="padding: 8px 12px; cursor: pointer;">Entitlement Name</div>
+
+    <div class="custom-dropdown">
+      <div id="dropdownSelected">Item Name</div>
+      <div id="dropdownOptions">
+        <div class="option" data-value="name">Item Name</div>
+        <div class="option" data-value="book">Plan Name</div>
+        <div class="option" data-value="entm">Entitlement Name</div>
       </div>
     </div>
   </div>
 
-
-    <div class="inline-group">
-      <span class="separator"></span>
-      <label for="sortMode" style="color: var(--text-muted); font-size: 14px; margin-left: 16px;">Sort By:</label>
-      <select id="sortMode">
-        <option value="camp-top" selected>Workshop Menu ▼</option>
-        <option value="camp-bottom">Workshop Menu ▲</option>
-        <option value="az">Alphabetical ▼</option>
-        <option value="za">Alphabetical ▲</option>
-        <option value="old-new">Oldest</option>
-        <option value="new-old">Newest</option>
-      </select>
-    </div>
+  <div class="inline-group">
+    <label for="sortMode">Sort By:</label>
+    <select id="sortMode">
+      <option value="camp-top" selected>Workshop Menu ▼</option>
+      <option value="camp-bottom">Workshop Menu ▲</option>
+      <option value="az">Alphabetical ▼</option>
+      <option value="za">Alphabetical ▲</option>
+      <option value="old-new">Oldest</option>
+      <option value="new-old">Newest</option>
+    </select>
   </div>
+</div>
+
 
 
 
