--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -75,35 +75,75 @@
     cursor: pointer;
   }
 
-.controls {
-  position: sticky;
-  top: 0;
-  z-index: 100;
-  background: var(--bg);
-  padding: 12px 16px;
-  border-bottom: 1px solid var(--card-bg);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 12px;
-}
-
-  .controls input[type="text"] {
-    padding: 10px;
-    font-size: 16px;
-    width: 100%;
-    max-width: 350px;
-    border: 2px solid var(--accent);
-    border-radius: 6px;
-    background-color: var(--card-bg);
-    color: var(--text);
+  .controls {
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    background: var(--bg);
+    padding: 12px 16px;
+    border-bottom: 1px solid var(--card-bg);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
   }
 
-.controls .search-line {
-  display: flex;
-  width: 100%;
-  max-width: 450px;
-}
+  .controls .search-line {
+    display: flex;
+    width: 100%;
+    max-width: 450px;
+    gap: 0;
+  }
+
+  #searchBox {
+    flex: 1;
+    height: 40px;
+    font-size: 16px;
+    padding: 0 12px;
+    border: 2px solid var(--accent);
+    border-right: none;
+    border-radius: 6px 0 0 6px;
+    background-color: var(--card-bg);
+    color: var(--text);
+    box-sizing: border-box;
+  }
+
+  .custom-dropdown {
+    position: relative;
+    height: 40px;
+    display: flex;
+    flex-shrink: 0;
+  }
+
+  #dropdownSelected {
+    display: flex;
+    align-items: center;
+    padding: 0 12px;
+    border: 2px solid var(--accent);
+    border-left: none;
+    border-radius: 0 6px 6px 0;
+    background-color: var(--card-bg);
+    color: var(--text);
+    cursor: pointer;
+    box-sizing: border-box;
+  }
+
+  #dropdownOptions {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: var(--card-bg);
+    border: 2px solid var(--accent);
+    border-radius: 6px;
+    overflow: hidden;
+    z-index: 200;
+  }
+
+  #dropdownOptions .option {
+    padding: 8px 12px;
+    cursor: pointer;
+  }
 
   .controls label {
     font-size: 14px;
@@ -111,7 +151,8 @@
     margin-left: 4px;
   }
 
-  .controls .inline-group {
+  .controls .inline-group,
+  .inline-group {
     display: flex;
     align-items: center;
     gap: 8px;
@@ -119,28 +160,21 @@
     margin-top: 8px;
   }
 
+  .inline-group label {
+    font-size: 14px;
+    color: var(--text-muted);
+  }
 
-.inline-group {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
-.inline-group label {
-  font-size: 14px;
-  color: var(--text-muted);
-}
-
-.inline-group select {
-  appearance: none;
-  background-color: var(--card-bg);
-  border: 2px solid var(--accent);
-  border-radius: 6px;
-  color: var(--text);
-  padding: 8px 12px;
-  font-size: 14px;
-  cursor: pointer;
-}
+  .inline-group select {
+    appearance: none;
+    background-color: var(--card-bg);
+    border: 2px solid var(--accent);
+    border-radius: 6px;
+    color: var(--text);
+    padding: 8px 12px;
+    font-size: 14px;
+    cursor: pointer;
+  }
 
   ul {
     list-style-type: none;
@@ -293,63 +327,6 @@
     text-align: left;
   }
 
-.controls .search-line {
-  display: flex;
-  gap: 0; /* no gap */
-  width: 100%;
-  max-width: 450px;
-}
-
-#searchBox {
-  flex: 1;
-  height: 40px;
-  font-size: 16px;
-  padding: 0 12px;
-  border: 2px solid var(--accent);
-  border-right: none;
-  border-radius: 6px 0 0 6px;
-  background-color: var(--card-bg);
-  color: var(--text);
-  box-sizing: border-box;
-}
-
-.custom-dropdown {
-  position: relative;
-  height: 40px;
-  display: flex;
-  flex-shrink: 0;
-}
-
-#dropdownSelected {
-  display: flex;
-  align-items: center;
-  padding: 0 12px;
-  border: 2px solid var(--accent);
-  border-left: none;
-  border-radius: 0 6px 6px 0;
-  background-color: var(--card-bg);
-  color: var(--text);
-  cursor: pointer;
-  box-sizing: border-box;
-}
-
-#dropdownOptions {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  background-color: var(--card-bg);
-  border: 2px solid var(--accent);
-  border-radius: 6px;
-  overflow: hidden;
-  z-index: 200;
-}
-
-#dropdownOptions .option {
-  padding: 8px 12px;
-  cursor: pointer;
-}
-
   @media (max-width: 600px) {
     li {
       flex-direction: column;
@@ -375,6 +352,15 @@
     }
     .controls {
       flex-direction: column;
+    }
+    .controls .search-line {
+      flex-direction: column;
+      gap: 8px;
+    }
+    #searchBox, #dropdownSelected {
+      width: 100%;
+      border-radius: 6px;
+      border-right: 2px solid var(--accent);
     }
   }
 </style>
