--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -101,7 +101,7 @@
     font-size: 16px;
     padding: 0 12px;
     border: 2px solid var(--accent);
-    border-right: none;
+    border-right: 2px solid var(--accent);
     border-radius: 6px 0 0 6px;
     background-color: var(--card-bg);
     color: var(--text);
@@ -120,7 +120,7 @@
     align-items: center;
     padding: 0 12px;
     border: 2px solid var(--accent);
-    border-left: none;
+    border-left: 2px solid var(--accent);
     border-radius: 0 6px 6px 0;
     background-color: var(--card-bg);
     color: var(--text);
@@ -327,42 +327,46 @@
     text-align: left;
   }
 
-  @media (max-width: 600px) {
-    li {
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-    }
-    .result-left {
-      max-width: none;
-    }
-    .result-right {
-      justify-content: center;
-      margin-top: 10px;
-    }
-    .result-right span.pill {
-      font-size: 12px;
-      padding: 2px 6px;
-    }
-    .result-right span.arrow {
-      border-top: 4px solid transparent;
-      border-bottom: 4px solid transparent;
-      border-left: 8px solid var(--accent);
-      margin: 0 4px;
-    }
-    .controls {
-      flex-direction: column;
-    }
-    .controls .search-line {
-      flex-direction: column;
-      gap: 8px;
-    }
-    #searchBox, #dropdownSelected {
-      width: 100%;
-      border-radius: 6px;
-      border-right: 2px solid var(--accent);
-    }
+@media (max-width: 600px) {
+  li {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
   }
+  .result-left {
+    max-width: none;
+  }
+  .result-right {
+    justify-content: center;
+    margin-top: 10px;
+  }
+  .result-right span.pill {
+    font-size: 12px;
+    padding: 2px 6px;
+  }
+  .result-right span.arrow {
+    border-top: 4px solid transparent;
+    border-bottom: 4px solid transparent;
+    border-left: 8px solid var(--accent);
+    margin: 0 4px;
+  }
+  .controls {
+    flex-direction: column;
+  }
+  .controls .search-line {
+    flex-direction: row; /* keep inline */
+    gap: 8px;
+    max-width: 100%;
+  }
+  #searchBox {
+    width: 70%; /* slightly narrower */
+    border-radius: 6px 0 0 6px;
+  }
+  #dropdownSelected {
+    width: 30%; /* matches remaining space */
+    border-radius: 0 6px 6px 0;
+  }
+}
 </style>
 </head>
 <body>
