--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -120,7 +120,7 @@
     align-items: center;
     padding: 0 12px;
     border: 2px solid var(--accent);
-    border-left: 2px solid var(--accent);
+    border-left: none;
     border-radius: 0 6px 6px 0;
     background-color: var(--card-bg);
     color: var(--text);
