--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -135,7 +135,8 @@
   width: 100%;
   max-width: 450px;
   border-radius: 6px;
-  position: relative;  /* required for dropdown absolute positioning */
+  position: relative;  
+  overflow: visible;
 }
 
 
@@ -157,7 +158,7 @@
   position: absolute;
   top: 100%;
   left: 0;
-  z-index: 1000;  
+  z-index: 1001;  
 }
 
 
