--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -123,7 +123,7 @@
 
 .custom-dropdown {
   position: relative;  
-  z-index: 50;         
+  z-index: 200;         
   display: flex;
   flex-shrink: 0;
   height: 40px;
@@ -158,7 +158,7 @@
   position: absolute;
   top: 100%;
   left: 0;
-  z-index: 1001;  
+  z-index: 201;  
 }
 
 
@@ -862,7 +862,7 @@ if (hasBook) {
     
       // ENTM pill (formatting for ATX / SCORE)
  if (hasEntm) {
-    const entmFull = r.ENTM_FULL?.replace(/^UTILITY_ENTM_ItemDisableEntitlement \[ENTM:[0-9A-Fa-f]+\];\s*/i, '');
+    let entmFull = r.ENTM_FULL?.replace(/^UTILITY_ENTM_ItemDisableEntitlement \[ENTM:[0-9A-Fa-f]+\];\s*/i, '');
     const edid = String(r.ENTM_EDID || '');
 
     // --- Manual alias map for tricky Mini Seasons ---
