--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -124,7 +124,7 @@
 .custom-dropdown {
   position: relative;  
   z-index: 200;         
-  display: flex;
+  display: inline-block;
   flex-shrink: 0;
   height: 40px;
 }
@@ -867,7 +867,9 @@ if (hasBook) {
     
       // ENTM pill (formatting for ATX / SCORE)
  if (hasEntm) {
-    let entmFull = r.ENTM_FULL?.replace(/UTILITY_ENTM_ItemDisableEntitlement \[ENTM:[0-9A-Fa-f]+\];?/gi, '').trim();
+    let entmFull = r.ENTM_FULL
+    ?.replace(/UTILITY_ENTM_ItemDisableEntitlement \[ENTM:[0-9A-Fa-f]+\];?/gi, '')
+    .trim();
     const edid = String(r.ENTM_EDID || '');
 
     // --- Manual alias map for tricky Mini Seasons ---
