--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -124,7 +124,7 @@
 .custom-dropdown {
   position: relative;  
   z-index: 200;         
-  display: inline-block;
+  display: flex;
   flex-shrink: 0;
   height: 40px;
 }
@@ -158,8 +158,14 @@
   position: absolute;
   top: 100%;
   left: 0;
-  z-index: 201;  
+  background-color: var(--card-bg);
+  border: 2px solid var(--accent);
+  border-radius: 6px;
+  overflow: hidden;
+  z-index: 201;
+  min-width: 120px; /* or same width as dropdownSelected */
 }
+
 
 
   #dropdownOptions, #sortDropdownOptions {
