--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -101,6 +101,7 @@
 
 .controls .search-line {
   display: flex;
+  gap: 0;
   width: 100%;
   max-width: 450px;
 }
@@ -303,7 +304,7 @@
   font-size: 16px;
   padding: 0 12px;
   border: 2px solid var(--accent);
-  border-right: none;
+  border-right: 2px solid var(--accent);
   border-radius: 6px 0 0 6px;
   background-color: var(--card-bg);
   color: var(--text);
@@ -312,7 +313,6 @@
 
   #searchBox, #dropdownSelected {
     width: 100%;
-    border-radius: 6px;
     border-right: 2px solid var(--accent); 
   }
 
