--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -273,6 +273,7 @@
     text-align: center;
     line-height: 1.2;
     max-width: 240px;
+    min-height: 30px;
     word-break: break-word;
   }
 
