--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -41,10 +41,38 @@
     text-align: center;
   }
 
-  .meta {
-    text-align: center;
-    margin-bottom: 12px;
-  }
+ .meta {
+  text-align: center;
+  margin-top: 0.5em;
+}
+
+.author {
+  color: var(--text-muted);
+  font-size: 14px;
+}
+
+.badge-link {
+  background: #333;
+  color: var(--accent);
+  border-radius: 4px;
+  padding: 2px 6px;
+  margin-left: 6px;
+  text-decoration: none;
+  font-size: 12px;
+  transition: background 0.2s;
+}
+
+.badge-link:hover {
+  background: #555;
+}
+
+.updated {
+  color: var(--text-muted);
+  font-size: 12px;
+  margin-top: 4px;
+}
+
+
 
   #pagination button {
     padding: 6px 10px;
@@ -393,17 +421,19 @@
 </style>
 </head>
 <body>
-  <div class="container">
-    <img src="/assets/CoverImage.png" alt="Fallout 76 C.A.M.P. Item Lookup" style="display: block; margin: 0 auto; max-width: 100%; height: auto;">
-    <div class="meta">
-    <p style="color: var(--text-muted); font-size: 14px;">
-Made by MrsBlobby | 
-     <a href="https://mrsblobby.github.io/76Tools.html" style="color: var(--accent); text-decoration:none;">
-    Other tools
-       </a>
-      </p>
-      <p style="color: var(--text-muted); font-size: 12px;">Last Updated: November 1, 2025</p>
-    </div>
+<div class="container">
+  <img src="/assets/CoverImage.png" 
+       alt="Fallout 76 C.A.M.P. Item Lookup" 
+       style="display:block; margin:0 auto; max-width:100%; height:auto;">
+  <div class="meta">
+    <p class="author">
+      Made by <span class="author-name">MrsBlobby</span>
+      <a href="https://mrsblobby.github.io/76Tools.html" class="badge-link">Other tools</a>
+    </p>
+    <p class="updated">Last Updated: November 1, 2025</p>
+  </div>
+</div>
+
 
     <!-- Version history -->
     <details>
