--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -51,6 +51,13 @@
   font-size: 14px;
 }
 
+.sep {
+  margin: 0 6px;
+  color: var(--text-muted);
+  opacity: 0.7;
+}
+
+
 .badge-link {
   background: #333;
   color: var(--accent);
@@ -428,7 +435,8 @@
   <div class="meta">
     <p class="author">
       Made by <span class="author-name">MrsBlobby</span>
-      <a href="https://mrsblobby.github.io/76Tools.html" class="badge-link">Other tools</a>
+      <span class="sep">•</span>
+      <a href="https://mrsblobby.github.io/76Tools.html" class="badge-link">Other Tools</a>
     </p>
     <p class="updated">Last Updated: November 1, 2025</p>
   </div>
