--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -329,6 +329,7 @@
     background: rgba(255, 192, 15, 0.05);
     border-left: 3px solid var(--accent);
     border-radius: 4px;
+    max-width: 800px;
     padding: 6px 12px;
     margin: 6px 0;
     text-align: left;
