--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -325,6 +325,12 @@
     color: var(--accent);
   }
 
+
+.changelog h2,
+.changelog h3 {
+  text-align: center;
+}
+
   .changelog-entry {
     background: rgba(255, 192, 15, 0.05);
     border-left: 3px solid var(--accent);
