--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -325,17 +325,10 @@
     color: var(--accent);
   }
 
-
-.changelog h2,
-.changelog h3 {
-  text-align: center;
-}
-
   .changelog-entry {
     background: rgba(255, 192, 15, 0.05);
     border-left: 3px solid var(--accent);
     border-radius: 4px;
-    max-width: 800px;
     padding: 6px 12px;
     margin: 6px 0;
     text-align: left;
@@ -364,9 +357,11 @@
   position: absolute;
   top: 100%;
   left: 0;
+  width: 100%;
   background-color: var(--card-bg);
   border: 2px solid var(--accent);
-  border-radius: 6px;
+  box-sizing: border-box;
+  border-radius: 0 0 6px 6px;
   overflow: hidden;
   z-index: 200;
 }
@@ -443,6 +438,7 @@
 
 
     <!-- Version history -->
+<div class="container">
     <details>
       <summary>Version History</summary>
       <div class="changelog-entry">
