--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -358,6 +358,7 @@
   top: 100%;
   left: 0;
   width: 100%;
+  margin-top: -2px;
   background-color: var(--card-bg);
   border: 2px solid var(--accent);
   box-sizing: border-box;
