--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -340,7 +340,7 @@
   font-size: 16px;
   padding: 0 12px;
   border: 2px solid var(--accent);
-  border-right: 2px solid var(--accent);
+  border-right: none;
   border-radius: 6px 0 0 6px;
   background-color: var(--card-bg);
   color: var(--text);
@@ -377,7 +377,7 @@
   align-items: center;
   padding: 0 12px;
   border: 2px solid var(--accent);
-  border-left: none;
+  border-left: 2px solid var(--accent);
   border-radius: 0 6px 6px 0;
   background-color: var(--card-bg);
   color: var(--text);
