--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -349,7 +349,7 @@
 
   #searchBox, #dropdownSelected {
     width: 100%;
-    border-right: 2px solid var(--accent); 
+    border-right: none; 
   }
 
 #dropdownOptions {
